# blitzar-rs

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package.json
.github/workflows/: release.yml  test-check-lint.yml
benches/: arkworks_halo2_interop_benchmarks.rs  blitzar_benchmarks.rs  blitzar_bls12_381_benchmarks.rs  blitzar_bn254_benchmarks.rs  blitzar_curve25519_benchmarks.rs  blitzar_grumpkin_benchmarks.rs  blitzar_halo2_bn256_benchmarks.rs  jaeger_benches.rs  packed_msm_benchmarks.rs  pedersen_benchmarks.rs  proofs_gpu_benchmarks.rs
ci/: build.sh  run_docker_with_cpu.sh  run_docker_with_gpu.sh
ci/docker/: Dockerfile  install_bazel.sh  install_buildifier.sh  install_rust.sh  setup_build_environment.sh
docs/: EXAMPLES.md
docs/commitments/: compute_bls12_381_g1_commitments_with_generators.md  compute_bn254_g1_commitments_with_generators.md  compute_commitments.md  compute_commitments_with_generators.md  compute_curve25519_commitments.md  compute_curve25519_commitments_with_generators.md  compute_grumpkin_commitments_with_generators.md  compute_halo2curves_bn256_g1_commitments_with_generators.md  get_curve25519_generators.md  get_generators.md  get_one_commit.md  get_one_curve25519_commit.md  init_backend.md  init_backend_with_config.md  update_commitments.md  update_curve25519_commitments.md
examples/: add_mult_commitments.rs  get_generators.rs  get_one_commit.rs  initialize_backend.rs  initialize_backend_with_config.rs  pass_bls12_381_g1_generators_to_commitment.rs  pass_bn254_g1_generators_to_commitment.rs  pass_curve25519_generators_to_commitment.rs  pass_generators_and_scalars_to_commitment.rs  pass_generators_to_commitment.rs  pass_grumpkin_generators_to_commitment.rs  pass_halo2curves_bn256_g1_generators_to_commitment.rs  simple_commitment.rs  simple_fixed_msm.rs  simple_scalars_commitment.rs  simple_sparse_commitment.rs  simple_update_commitment.rs
src/: commitments.rs  enums.rs  lib.rs  sequence.rs
src/commitments/: mod.rs  tests.rs
src/compute/: arkworks_halo2_interop.rs  arkworks_halo2_interop_tests.rs  backend.rs  commitments.rs  commitments_tests.rs  conversion.rs  conversion_tests.rs  curve.rs  element_p2.rs  element_p2_test.rs  fixed_msm.rs  fixed_msm_tests.rs  fixed_sw_msm.rs  generators.rs  generators_tests.rs  mod.rs
src/proof/: error.rs  field.rs  inner_product.rs  inner_product_tests.rs  mod.rs  sumcheck.rs  sumcheck_tests.rs  sumcheck_transcript.rs
src/sequence/: mod.rs  test.rs
src/sequences/: dense_sequence.rs  dense_sequence_data.rs  descriptor.rs  mod.rs  sequence.rs  sparse_sequence.rs
