[package]
version = "0.0.0" # This version will be automatically updated
readme = "README.md"
name = "blitzar"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/spaceandtimelabs/blitzar-rs"
keywords = ["gpu-cryptography", "gpu-crypto", "gpu-ristretto", "gpu-curve25519", "gpu-ristretto255"]
description = "High-Level Rust wrapper for the blitzar-sys crate "
exclude = [
    "**/.gitignore",
    ".gitignore"
]

[dependencies]
ark-bls12-381 = { version = "0.4.0" }
ark-ec = { version = "0.4.0" }
ark-ff = { version = "0.4.0", optional = true }
ark-serialize = { version = "0.4.2" }
ark-std = { version = "0.4.0" }
blitzar-sys = { version = "1.15.1" }
curve25519-dalek = { version = "4", features = ["serde", "rand_core"] }
merlin = "2"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
tracing = { version = "0.1.36" }

# this sections is shared by tests, benchmarks, and examples
[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.8"
rand_core = "0.6"

[[bench]]
harness = false
name = "blitzar_benchmarks"
required-features = ["rand_core"]

[features]
arkworks = ["dep:ark-ff"]
cpu = []
default = ["gpu"]
gpu = []
