[package]
version = "0.0.0" # This version will be automatically updated
readme = "README.md"
name = "blitzar"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/spaceandtimelabs/blitzar-rs"
keywords = ["gpu-cryptography", "curve25519", "ristretto255", "bls12-381", "bn254"]
description = "High-Level Rust wrapper for the blitzar-sys crate "
exclude = [
    "**/.gitignore",
    ".gitignore"
]
documentation = "https://docs.rs/blitzar"

[dependencies]
ark-bls12-381 = { version = "0.4.0" }
ark-bn254 = { version = "0.4.0" }
ark-ec = { version = "0.4.0" }
ark-ff = { version = "0.4.0" }
ark-serialize = { version = "0.4.2" }
ark-std = { version = "0.4.0" }
rayon = { version = "1.5" }
blitzar-sys = { version = "1.64.1" }
curve25519-dalek = { version = "4", features = ["serde"] }
merlin = "2"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"

# this sections is shared by tests, benchmarks, and examples
[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
curve25519-dalek = { version = "4", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"

[[bench]]
harness = false
name = "blitzar_benchmarks"

[features]
cpu = []
default = ["gpu"]
gpu = []
