[package]
version = "0.0.0" # This version will be automatically updated
readme = "README.md"
name = "blitzar"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/spaceandtimelabs/blitzar-rs"
keywords = ["gpu-cryptography", "curve25519", "ristretto255", "bls12-381", "bn254"]
description = "High-Level Rust wrapper for the blitzar-sys crate "
exclude = [
    "**/.gitignore",
    ".gitignore"
]
documentation = "https://docs.rs/blitzar"

[dependencies]
ark-bls12-381 = { version = "0.5.0" }
ark-bn254 = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-grumpkin = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
ark-std = { version = "0.5.0" }
opentelemetry = { version = "0.23.0" }
opentelemetry-jaeger = { version = "0.20.0" }
rayon = { version = "1.5" }
blitzar-sys = { version = "1.81.0" }
bytemuck = {version = "1.16.3", features = ["derive"]}
curve25519-dalek = { version = "4", features = ["serde"] }
halo2curves = { version = "0.8.0" }
merlin = "2"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
tracing = { version = "0.1.36", features = ["attributes"] }
tracing-opentelemetry = { version = "0.22.0" }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }

# this sections is shared by tests, benchmarks, and examples
[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
curve25519-dalek = { version = "4", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"
tempfile = "3.13.0"

[[bench]]
harness = false
name = "blitzar_bls12_381_benchmarks"

[[bench]]
harness = false
name = "blitzar_bn254_benchmarks"

[[bench]]
harness = false
name = "blitzar_curve25519_benchmarks"

[[bench]]
harness = false
name = "blitzar_grumpkin_benchmarks"

[[bench]]
harness = false
name = "blitzar_halo2_bn256_benchmarks"

[[bench]]
harness = false
name = "jaeger_benches"

[[bench]]
harness = false
name = "packed_msm_benchmarks"

[features]
cpu = []
default = ["gpu"]
gpu = []
arkworks = []
